# file-dedup-rust

./: .gitignore  README.md  docker-compose.yaml  dump.rdb
backend/: Cargo.toml  Dockerfile  dump.rdb
backend/src/: config.rs  lib.rs  main.rs  metrics.rs  middleware.rs  observability.rs
backend/src/database/: mod.rs  users.rs
backend/src/handlers/: files.rs  health.rs  jobs.rs  mod.rs  websocket.rs
backend/src/handlers/auth/: auth_handlers.rs  login_handler.rs  mod.rs  register_handlers.rs
backend/src/migrations/: 0001_users_table.sql  0002_file_cluster.sql  0003_jobs_table.sql
backend/src/services/: auth.rs  auth_service.rs  embeddings.rs  file_upload.rs  files.rs  mod.rs
backend/src/services/auth/: auth_service.rs
backend/src/services/deduplication/: README.md
backend/src/worker/: DEDUPLICATION_SERVICE.md  README.md  deduplication_service.rs  deduplicator.rs  job_queue.rs  mod.rs  worker_process.rs
client/: Dockerfile  package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx  type.ts
client/src/app/register/: page.tsx
client/src/components/: Dashboard.tsx  LoginForm.tsx  MultipartUpload.tsx
client/src/contexts/: AuthContext.tsx
iac/: .terraform.lock.hcl  README.md  opensearch.tf  opensearch_indexes.tf  provider.tf  storage.tf  terraform.tfvars.example  variables.tf
observability/: README.md
observability/grafana/dashboards/: file-dedup-dashboard.json
observability/grafana/provisioning/datasources/: datasources.yml
observability/loki/: loki-config.yml
observability/otel/: otel-collector-config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yml
