[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.219"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
actix-cors = "0.7.1"
aws-sdk-s3 = "1.103.0"
aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
futures-util = "0.3.31"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "sqlite"] }
tokio-test = "0.4"
